<resources>
    <string name="app_name">MSc</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="signin">Sign In</string>
    <string name="email">User Name</string>
    <string name="password">Password</string>
    <string name="team">Team</string>
    <string name="title">Diriya Dharuwo</string>


    <color name="colorPrimary">#607D8B</color>
    <color name="colorPrimaryDark">#2196F3</color>
    <color name="white">#FFFFFF</color>
    <color name="textColorPrimary">#263238</color>
    <color name="windowBackground">#42A5F5</color>
    <color name="navigationBarColor">#000000</color>
    <color name="colorAccent">#FF80AB</color>
    <color name="green_text">#51bf87</color>
    <color name="nav_bg">#144E73</color>
    <color name="gray_bg">#f1f1f1</color>
    <color name="shadow_bg">#bdbdbd</color>

    <string name="exception">Something went wrong. Please try again</string>
    <string name="username_empty">Please enter user name</string>
    <string name="password_empty">Please enter password</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="welcome">Welcome</string>
    <string name="sample_title">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus</string>
    <string name="sample_msg">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga</string>


    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Appointment</item>
        <item>Prescription</item>
        <item>Notifications</item>
        <item>History</item>
        <item>Help Center</item>
        <item>Sign Out</item>
    </string-array>

    <string-array name="doctors">
        <item>-- Select Doctor --</item>
        <item>Dr. A B C de Silve</item>
        <item>Dr. P Q R Perera</item>
        <item>Prof. Sanath Fenando</item>
        <item>Dr. Mahela Jayawardane</item>
        <item>Prof. Lahiru karunathilike</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="doctor_name">Doctor</string>
    <string name="date">Date</string>
    <string name="appointment_confirm_text">* Once you confirm appointment it will update to system.</string>

</resources>
