<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:id="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/title"
        android:id="@+id/textView2"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:id="@+id/textView4" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:background="@drawable/textview_rounded_corner"
        android:id="@+id/userNameEditText"
        android:paddingLeft="10dp"
        android:fontFamily="sans-serif-medium"
        android:layout_gravity="center_vertical"
        android:hint="@string/email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:inputType="textPassword"
        android:background="@drawable/textview_rounded_corner"
        android:id="@+id/passwordEditText"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/password" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/signin"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"
        android:background="@drawable/button_blue_signin"
        android:id="@+id/signinButton" />

    <ProgressBar
        android:id="@+id/progressBarStyleLarge"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/textView5" />
</LinearLayout>
