<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.ay.com.msc.fragment.AppointmentFragment"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp"
    android:background="@color/gray_bg"
    android:paddingBottom="10dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doctor_name"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:id="@+id/textView11" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:background="@drawable/blue_textbox"
        android:id="@+id/doctorsNameSpinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"

        android:id="@+id/textView12" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:editable="false"
        android:inputType="date"
        android:ems="10"
        android:paddingLeft="20dp"
        android:background="@drawable/blue_textbox"
        android:id="@+id/appoinmentDateEditText"
        android:hint="Tap to select date" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/appointment_confirm_text"
        android:id="@+id/textView14" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Appointment"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/button_blue_round"
        android:id="@+id/appointmentButton" />
</LinearLayout>
